--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="tembo%20menu%20dec%202021-%20(1).pdf"></a></p>  
+  <p><a href="tembo%20menu%20dec%202021-%20(1).pdf">Click Here for Menu</a></p>  
 <html>
